--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /db.sqlite3
+.vscode/
+.DS_Store
+**/__pycache__/*
+/.idea/fractionProject.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.venv/
